# libsumi

./: CMakeLists.txt  Cargo.toml  README.md  build.sh  module.modulemap
include/sumi/: module.modulemap  sumi.h  sumi_engine.h  sumi_noise.h  sumi_platform.h
src/: color.rs  kantei.rs  lib.rs  math.rs
tests/: test_main.cpp  test_suite.cpp
